--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a id="vexor-documentation" class="anchor" href="#vexor-documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Vexor Documentation</h1>
 
 <h1>
-<a id="starting-with-vexor" class="anchor" href="#starting-with-vexor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Starting with Vexor</h1>
+<a id="starting-with-vexor" class="anchor" href="#starting-with-vexor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting started with Vexor</h1>
 
 <h2>
 <a id="registration" class="anchor" href="#registration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Registration</h2>
@@ -459,7 +459,6 @@ script: parallel_rspec
 
     </section>
 
-  
+
   </body>
 </html>
-
